Added path guidance for the doc folder so GitHub Pages can access the photos

--- a/angular.json
+++ b/angular.json
@@ -37,6 +37,11 @@
                 "glob": "**/*",
                 "input": "public",
                 "output": "/"
+              },
+              {
+                "glob": "**/*",
+                "input": "doc",
+                "output": "/"
               }
             ],
             "styles": [
