Added 2nd try for path guidance for the doc folder so GitHub Pages can access the photos

--- a/angular.json
+++ b/angular.json
@@ -35,13 +35,8 @@
               "src/assets",
               {
                 "glob": "**/*",
-                "input": "public",
-                "output": "/"
-              },
-              {
-                "glob": "**/*",
                 "input": "doc",
-                "output": "/"
+                "output": "assets/doc"
               }
             ],
             "styles": [
