--- a/angular.json
+++ b/angular.json
@@ -35,8 +35,13 @@
               "src/assets",
               {
                 "glob": "**/*",
+                "input": "public",
+                "output": "/"
+              },
+              {
+                "glob": "**/*",
                 "input": "doc",
-                "output": "assets/doc"
+                "output": "/"
               }
             ],
             "styles": [
